err/webtestrecorder.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/Tempita-0.5.2.egg-info'...
Listing './lib/python3.5/site-packages/WSGIProxy-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/WebTest-2.0.29.dist-info'...
Listing './lib/python3.5/site-packages/WebTestRecorder-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tempita'...
Listing './lib/python3.5/site-packages/waitress'...
Listing './lib/python3.5/site-packages/waitress/tests'...
Listing './lib/python3.5/site-packages/waitress/tests/fixtureapps'...
Listing './lib/python3.5/site-packages/waitress-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/webtest'...
Listing './lib/python3.5/site-packages/webtestrecorder'...
Compiling './lib/python3.5/site-packages/webtestrecorder/http.py'...
***   File "./lib/python3.5/site-packages/webtestrecorder/http.py", line 91
    print 'Skipped request %s %s' % (req.method, req.path_qs)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/webtestrecorder/tests'...
Compiling './lib/python3.5/site-packages/webtestrecorder/tests/test_recorder.py'...
***   File "./lib/python3.5/site-packages/webtestrecorder/tests/test_recorder.py", line 21
    print dt
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wsgiproxy'...
Compiling './lib/python3.5/site-packages/wsgiproxy/exactproxy.py'...
***   File "./lib/python3.5/site-packages/wsgiproxy/exactproxy.py", line 89
    except socket.error, exc:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiproxy/middleware.py'...
***   File "./lib/python3.5/site-packages/wsgiproxy/middleware.py", line 116
    except httpexceptions.HTTPException, exc:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgiproxy/spawn.py'...
***   File "./lib/python3.5/site-packages/wsgiproxy/spawn.py", line 165
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
